# misw4406-14-desacopla2

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_compliance  README.md  docker-compose.pulsar.yml  docker-compose.yml  pyproject.toml  requirements.txt
compliance/: Dockerfile  docker-compose.yml
gestion-de-alianzas/: Dockerfile  SAGA_LOGGING.md  docker-compose.yml  requirements.txt  test_saga_logging.py
gestion-de-integraciones/: .dockerignore  Dockerfile  README.md  README_EVENTS.md  app.py  docker-compose.pulsar.yml  docker-compose.yml  pyproject.toml  requirements.txt
gestion-de-integraciones/api/: __init__.py  partners.py  saga_partners.py
gestion-de-integraciones/config/: logging_config.py
gestion-de-integraciones/modulos/partners/aplicacion/: dto.py  mapeadores.py  saga_integration.py  servicios.py
gestion-de-integraciones/modulos/partners/dominio/: entidades.py  eventos.py  excepciones.py  repositorios.py
gestion-de-integraciones/modulos/partners/infraestructura/: dto.py  mapeadores.py  repositorios.py
gestion-de-integraciones/modulos/partners/infraestructura/eventos/: consumidores.py  despachadores.py  mapeadores.py  procesadores.py
gestion-de-integraciones/modulos/partners/infraestructura/eventos/schema/v1/: __init__.py  eventos.py
gestion-de-integraciones/scripts/: test_events.py
gestion-de-programas/: README.md  docker-compose.yml  pyproject.toml
helm/: README.md
partners-bff/: Dockerfile  README.md  docker-compose.yml  requirements.txt
postman/: AlpesPartners.postman_collection.json
saga-orchestrator/: .dockerignore  Dockerfile  Makefile  README.md  SAGA_DOCUMENTATION.md  TROUBLESHOOTING.md  app.py  docker-compose.dev.yml  docker-compose.shared-pulsar.yml  docker-compose.simple.yml  docker-compose.yml  env.example  pyproject.toml
saga-orchestrator/scripts/: cleanup-and-restart.sh  init-db.sql  monitor_saga_events.py  start-dev-environment.sh  start-with-shared-pulsar.sh  stop-dev-environment.sh  test_docker_build.py  test_saga_integration.py  validate_docker_setup.py
saga-orchestrator/src/api/: saga_api.py
saga-orchestrator/src/application/: event_handlers.py  event_listener_service.py  saga_orchestrator.py
saga-orchestrator/src/domain/: events.py  saga_state.py
saga-orchestrator/src/infrastructure/: database.py  pulsar_client.py
saga-orchestrator/tests/: test_saga_flow.py
scripts/: README.md  build-and-push-alliances.sh  build-and-push-campaigns.sh  build-and-push-compliance.sh  build-and-push-integrations.sh  build-and-push-partners-bff.sh  build-and-push-saga-orchestrator.sh  cleanup.sh  deploy-all.sh  deploy-alliances.sh  deploy-campaigns.sh  deploy-compliance.sh  deploy-helm.sh  deploy-pulsar.sh  (+5 more)
(+258 files in other folders)
