[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gestion-de-integraciones"
version = "0.1.0"
description = "Servicio de Gestión de Integraciones y CRM Partners"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==3.1.1",
    "Flask-SQLAlchemy==3.1.1",
    "flask-swagger==0.2.14",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pulsar-client[avro]>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.hatch.build.targets.wheel]
packages = ["gestion_de_integraciones"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
